[gd_scene load_steps=8 format=3 uid="uid://wqaff7hhl70a"]

[ext_resource type="Script" path="res://scripts/axe_rigid_body.gd" id="1_iaejq"]
[ext_resource type="Texture2D" uid="uid://du2e61j4wqk50" path="res://assets/player/axe00.png" id="1_pami4"]

[sub_resource type="Animation" id="Animation_tkrgm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785398]
}

[sub_resource type="Animation" id="Animation_mg3s5"]
resource_name = "throw"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -0.785398, 0.0, 0.785398, 1.5708, 2.35619, 3.14159, 3.92699, 4.71239]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_81yxp"]
_data = {
"RESET": SubResource("Animation_tkrgm"),
"throw": SubResource("Animation_mg3s5")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ncxh7"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i7c7y"]

[node name="AxeRigidBody" type="RigidBody2D"]
script = ExtResource("1_iaejq")
metadata/_edit_group_ = true

[node name="AxeSprite" type="Sprite2D" parent="."]
rotation = -0.785398
texture = ExtResource("1_pami4")

[node name="AxeAnimation" type="AnimationPlayer" parent="AxeSprite"]
libraries = {
"": SubResource("AnimationLibrary_81yxp")
}

[node name="UselessCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_ncxh7")
disabled = true

[node name="AxeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AxeArea"]
shape = SubResource("CircleShape2D_i7c7y")
disabled = true
